# LocalArchive

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  localarchive.spec  pyproject.toml  requirements-ocr-paddle.txt  requirements.txt
.github/workflows/: build-binaries.yml
docs/education/: getting-started.md  medical-records.md  research-workflow.md
localarchive/: __init__.py  __main__.py  cli.py  config.py  gui_launcher.py  utils.py
localarchive/cli_commands/: __init__.py  backup_cmd.py  connectors_cmd.py  process_cmd.py  search_cmd.py
localarchive/core/: __init__.py  citations.py  classifier.py  duplicates.py  entity_graph.py  exporter.py  extractor.py  ingester.py  metadata_profiles.py  ocr_engine.py  plugins.py  redaction.py  ref_importer.py  resources.py  similarity.py  table_extractor.py  templates.py  validation.py
localarchive/db/: __init__.py  database.py  models.py  search.py
localarchive/ui/: __init__.py  app.py
tests/: test_classifier.py  test_cli_integration.py  test_config.py  test_database.py  test_extractor.py  test_ingester.py  test_migrations.py  test_packaging_assets.py  test_plugins.py  test_table_extractor.py  test_ui.py  test_ui_browser_smoke.py  test_utils.py
