[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "localarchive"
version = "0.1.0"
description = "Local-first document intelligence pipeline. OCR, search, and organize your documents offline."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Aren Garro"},
]
keywords = ["ocr", "document-processing", "local-first", "search", "offline", "privacy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: General",
]

dependencies = [
    "click>=8.1",
    "pymupdf>=1.23",
    "Pillow>=10.0",
    "paddleocr>=2.7",
    "paddlepaddle>=2.5",
    "spacy>=3.7",
    "fastapi>=0.109",
    "uvicorn>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.6",
    "toml>=0.10",
    "rich>=13.0",
]

[project.optional-dependencies]
easyocr = ["easyocr>=1.7"]
ollama = ["ollama>=0.1"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.2", "mypy>=1.8"]

[project.scripts]
localarchive = "localarchive.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["localarchive*"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.ruff.lint.per-file-ignores]
"localarchive/db/database.py" = ["E501"]
"localarchive/db/search.py" = ["E501"]
"localarchive/ui/app.py" = ["E501"]
"tests/test_migrations.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
